--- a/FinalMOCK/app/src/main/res/values/strings.xml
+++ b/FinalMOCK/app/src/main/res/values/strings.xml
@@ -15,10 +15,24 @@
     <!--Sign Up-->
     <string name="signup">Sign up</string>
 
+    <!--Reset password-->
+    <string name="reset">Reset password</string>
+
     <!--Home-->
     <string name="start">Start Quiz</string>
     <string name="sign_out">Sign Out</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
-    <!--Web client id-->
-    <string name="default_web_client_id">977987498965-n5h72htac9416m8hn44hrf77hmv33a0h.apps.googleusercontent.com</string>
+    <!--Quiz-->
+    <string name="loading">Loading</string>
+    <string name="finish">Finish</string>
+    <string name="next">Next</string>
+    <!--    <string name="time">Time: </string>-->
+    <!--    <string name="correct">Correct Answer: </string>-->
+    <!--    <string name="wrong">Wrong Answer: </string>-->
+
+    <!--Congratulation-->
+    <string name="play_again">PLAY AGAIN</string>
+    <string name="exit">EXIT</string>
 </resources>
